# azul-client

./: .gitignore  Dockerfile  README.md  pipeline-mirror.yaml  pipeline.yaml  pyproject.toml  requirements.txt  setup.py  tox.ini
azul_client/: client.py  config.py  exceptions.py  shared.py
azul_client/api/: __init__.py  base_api.py  binaries_data.py  binaries_meta.py  purge.py
azul_client/oidc/: callback.py  oidc.py
docs/: api.md
tests/integration/: __init__.py  base_test.py  test_binary_data_upload_multiprocessing.py  test_binary_data_uploads.py  test_binary_meta_find.py  test_binary_meta_other.py  test_features.py  test_purge.py
tests/unit/: test_binaries_data.py  test_client_binary.py  test_client_other.py  test_config.py  test_oidc.py  test_security.py
