[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 64",
    "setuptools_scm >= 8",
]

[tool.black]
line-length = 119
target-version = ["py310"]
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.tox
    | \.venv
    | .*\.egg-info
    | __pycache__
    | build
    | dist
  )/
)
'''

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries',
]
requires-python = '>=3.12'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.cruft]
skip = [
    "debian.txt",
    "README.md",
    "azul_client",
    "tests"
]

[tool.setuptools_scm]
version_scheme = "only-version"
